--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -313,6 +313,7 @@
         <label for="delay_posting">Delay Posting</label>
         <select name="delay_posting" id="delay_posting" class="form-control">
           <option value="immediate" {% if rubric_index and rubric_index[0].delay_posting == 'immediate' %}selected{% endif %}>Immediately</option>
+          <option value="1m" {% if rubric_index and rubric_index[0].delay_posting == '1m' %}selected{% endif %}>1 Minute (Testing)</option>
           <option value="12h" {% if rubric_index and rubric_index[0].delay_posting == '12h' %}selected{% endif %}>12 hours</option>
           <option value="24h" {% if rubric_index and rubric_index[0].delay_posting == '24h' %}selected{% endif %}>24 hours</option>
           <option value="36h" {% if rubric_index and rubric_index[0].delay_posting == '36h' %}selected{% endif %}>36 hours</option>
