--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -281,6 +281,14 @@
           <option value="hard">Hard</option>
         </select>
       </div>
+      <div class="form-group third">
+        <label for="allow_inline_submission">Allow Inline Submission</label>
+        <select name="allow_inline_submission" id="allow_inline_submission" class="form-control">
+          <option value="no">No – file upload only</option>
+          <option value="yes">Yes – students type directly</option>
+        </select>
+      </div>
+      
     </div>          
     <div class="row">
       <div class="form-group wide">
