--- a/templates/launch.html
+++ b/templates/launch.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Rubiqs | AI-Powered Mastery</title>
-  <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+  <script src="https://cdn.tiny.cloud/1/{{ tinymce_api_key }}/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
   <script>
     tinymce.init({
       selector: '#inline-textarea',
